--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -14,11 +14,11 @@ Parameters:
   Subnet1Cidr: 
     Type: String
     Default: 10.20.0.0/24
-    Description: 'CIDR for Subnet 1'
+    Description: 'CIDR for Metaflow VPC Subnet 1'
   Subnet2Cidr: 
     Type: String
     Default: 10.20.1.0/24
-    Description: 'CIDR for Subnet 2'
+    Description: 'CIDR for Metaflow VPC Subnet 2'
   MaxVCPUBatch: 
     Type: Number
     Default: 64
@@ -977,36 +977,33 @@ Resources:
       UsagePlanId: !Ref ApiUsagePlan
 Outputs:
   ServiceUrl:
-    Description: "External Service URL"
+    Description: "Externally Visible URL for Metadata Service (Open to Public Access) [METAFLOW_SERVICE_URL]"
     Value: !Sub "https://${Api}.execute-api.${AWS::Region}.amazonaws.com/api/"
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'ServiceUrl' ] ]
   InternalServiceUrl:
-    Description: "Internal Service URL"
+    Description: "Internal URL for Metadata Service (Only Accessible Inside VPC)"
     Value: !Sub "http://${NLB.DNSName}/"
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'InternalServiceUrl' ] ]
   ApiKeyId:
     Condition: 'EnableAuth'
-    Description: "API Key ID"
+    Description: "API Gateway Key ID for Metadata Service. Fetch Key from AWS Console [METAFLOW_SERVICE_AUTH_TOKEN]"
     Value: !Ref 'ApiKey'
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'ApiKeyId' ] ]
   SageMakerNoteBookURL:
-    Description: URL for the newly created SageMaker Notebook Instance
+    Description: URL for SageMaker Notebook Instance
     Value: !Sub 'https://${SageMakerNotebookInstance.NotebookInstanceName}.notebook.${AWS::Region}.sagemaker.aws/tree'
   SageMakerNoteBookTerminalURL:
-    Description: Terminal access URL for the newly created SageMaker Notebook Instance
+    Description: Terminal URL for SageMaker Notebook Instance
     Value: !Sub 'https://${SageMakerNotebookInstance.NotebookInstanceName}.notebook.${AWS::Region}.sagemaker.aws/terminals/1'
-  BatchJobQueueArn:
-    Description: Batch Job Queue ARN
-    Value: !Ref JobQueue
-  BucketName:
-    Description: Metaflow S3 Bucket
-    Value: !Ref MetaflowS3Bucket
-  ECSJobRole:
-    Description: Role to be applied to Metaflow Batch Job Definitions
+  MetaflowDataStoreS3Url:
+    Description: Amazon S3 URL for Metaflow DataStore [METAFLOW_DATASTORE_SYSROOT_S3]
+    Value: !Sub "s3://${MetaflowS3Bucket}/metaflow"
+  MetaflowDataToolsS3Url:
+    Description: Amazon S3 URL for Metaflow DataTools [METAFLOW_DATATOOLS_S3ROOT]
+    Value: !Sub "s3://${MetaflowS3Bucket}/data"
+  ECSJobRoleForBatchJobs:
+    Description: Role for AWS Batch to Access Amazon S3 [METAFLOW_ECS_S3_ACCESS_IAM_ROLE]
     Value: !GetAtt 'BatchS3TaskRole.Arn'
+  BatchJobQueueArn:
+    Description: AWS Batch Job Queue ARN for Metaflow [METAFLOW_BATCH_JOB_QUEUE]
+    Value: !Ref JobQueue
   SagemakerExecutionRole:
-    Description: Role to be assumed during Sagemaker training/deploy jobs
+    Description: Role for Sagemaker Jobs
     Value: !GetAtt 'SageMakerExecutionRole.Arn'
