--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -976,11 +976,23 @@ Resources:
       KeyType: API_KEY
       UsagePlanId: !Ref ApiUsagePlan
 Outputs:
+  MetaflowDataStoreS3Url:
+    Description: Amazon S3 URL for Metaflow DataStore [METAFLOW_DATASTORE_SYSROOT_S3]
+    Value: !Sub "s3://${MetaflowS3Bucket}/metaflow"
+  MetaflowDataToolsS3Url:
+    Description: Amazon S3 URL for Metaflow DataTools [METAFLOW_DATATOOLS_S3ROOT]
+    Value: !Sub "s3://${MetaflowS3Bucket}/data"
+  BatchJobQueueArn:
+    Description: AWS Batch Job Queue ARN for Metaflow [METAFLOW_BATCH_JOB_QUEUE]
+    Value: !Ref JobQueue
+  ECSJobRoleForBatchJobs:
+    Description: Role for AWS Batch to Access Amazon S3 [METAFLOW_ECS_S3_ACCESS_IAM_ROLE]
+    Value: !GetAtt 'BatchS3TaskRole.Arn'
   ServiceUrl:
     Description: "URL for Metadata Service (Open to Public Access) [METAFLOW_SERVICE_URL]"
     Value: !Sub "https://${Api}.execute-api.${AWS::Region}.amazonaws.com/api/"
   InternalServiceUrl:
-    Description: "URL for Metadata Service (Accessible in VPC) [METAFLOW_SERVICE_URL]"
+    Description: "URL for Metadata Service (Accessible in VPC) [METAFLOW_SERVICE_INTERNAL_URL]"
     Value: !Sub "http://${NLB.DNSName}/"
   ApiKeyId:
     Condition: 'EnableAuth'
@@ -993,15 +1005,3 @@ Outputs:
   SageMakerNoteBookURL:
     Description: URL for SageMaker Notebook Instance
     Value: !Sub 'https://${SageMakerNotebookInstance.NotebookInstanceName}.notebook.${AWS::Region}.sagemaker.aws/tree'
-  MetaflowDataStoreS3Url:
-    Description: Amazon S3 URL for Metaflow DataStore [METAFLOW_DATASTORE_SYSROOT_S3]
-    Value: !Sub "s3://${MetaflowS3Bucket}/metaflow"
-  MetaflowDataToolsS3Url:
-    Description: Amazon S3 URL for Metaflow DataTools [METAFLOW_DATATOOLS_S3ROOT]
-    Value: !Sub "s3://${MetaflowS3Bucket}/data"
-  ECSJobRoleForBatchJobs:
-    Description: Role for AWS Batch to Access Amazon S3 [METAFLOW_ECS_S3_ACCESS_IAM_ROLE]
-    Value: !GetAtt 'BatchS3TaskRole.Arn'
-  BatchJobQueueArn:
-    Description: AWS Batch Job Queue ARN for Metaflow [METAFLOW_BATCH_JOB_QUEUE]
-    Value: !Ref JobQueue
